test/corpus/main.txt
===============================================================================
Number
===============================================================================

4

-------------------------------------------------------------------------------

(expression (number))

===============================================================================
Variable
===============================================================================

x

-------------------------------------------------------------------------------

(expression (variable))

===============================================================================
Addition
===============================================================================

x + 4.0

-------------------------------------------------------------------------------

(expression
 (sum
  left: (variable)
  right: (number)))

===============================================================================
Multiple Additions
===============================================================================

x + 4.0 + y

-------------------------------------------------------------------------------

(expression
 (sum
  left: (sum
   left: (variable)
   right: (number))
  right: (variable)))

===============================================================================
Subtraction
===============================================================================

4 - x

-------------------------------------------------------------------------------

(expression
 (subtraction
  left: (number)
  right: (variable)))

===============================================================================
Multiple subtraction
===============================================================================

4 - x - 3 + 7

-------------------------------------------------------------------------------

(expression
 (sum
  left: (subtraction
   left: (subtraction
    left: (number)
    right: (variable))
   right: (number))
  right: (number)))

===============================================================================
Multiplication
===============================================================================

x * 4.0

-------------------------------------------------------------------------------

(expression
 (product
  left: (variable)
  right: (number)))

===============================================================================
Multiple Multiplications
===============================================================================

x * 4.0 * y

-------------------------------------------------------------------------------

(expression
 (product
  left: (product
   left: (variable)
   right: (number))
  right: (variable)))

===============================================================================
Multiplication & addition
===============================================================================

x * y + z

-------------------------------------------------------------------------------

(expression
 (sum
  left: (product
   left: (variable)
   right: (variable))
  right: (variable)))

===============================================================================
Multiplication & addition backwards
===============================================================================

z + x * y

-------------------------------------------------------------------------------

(expression
 (sum
  left: (variable)
  right: (product
    left: (variable)
    right: (variable))))

===============================================================================
Division
===============================================================================

4 / x

-------------------------------------------------------------------------------

(expression
 (division
  left: (number)
  right: (variable)))

===============================================================================
Multiple division
===============================================================================

x / 4.0 / y * 6

-------------------------------------------------------------------------------

(expression
 (product
  left: (division
   left: (division
    left: (variable)
    right: (number))
   right: (variable))
  right: (number)))

===============================================================================
Exponents
===============================================================================

x ** y

-------------------------------------------------------------------------------

(expression
 (exponent
  base: (variable)
  exponent: (variable)))

===============================================================================
Exponents of exponents
===============================================================================

x ** 4 ** z

-------------------------------------------------------------------------------

(expression
 (exponent
  base: (exponent
   base: (variable)
   exponent: (number))
  exponent: (variable)))

===============================================================================
Multiplication, addition, & exponents
===============================================================================

x * y ** 4 + z

-------------------------------------------------------------------------------

(expression
 (sum
  left: (product
   left: (variable)
   right: (exponent
    base: (variable)
    exponent: (number)))
  right: (variable)))

===============================================================================
Parenthesized expression
===============================================================================

(z + x) * y

-------------------------------------------------------------------------------

(expression
 (product
  left: (parenthesized_expression
   (sum
     left: (variable)
     right: (variable)))
  right: (variable)))

===============================================================================
Parenthesized expression with exponents & division
===============================================================================

(z + x) ** ((y / 2) - 1)

-------------------------------------------------------------------------------

(expression
   (exponent
     (parenthesized_expression
       (sum
         (variable)
         (variable)))
     (parenthesized_expression
       (subtraction
         (parenthesized_expression
           (division
             (variable)
             (number)))
         (number)))))
